@@ -1,3 +1,8 @@
+2006-09-30  Joe Neeman  <joeneeman@gmail.com>
+
+	* lily/source-file.cc (get_line): fix off-by-one error
+	and clean up some of the logic
+
 2006-09-29  Joe Neeman  <joeneeman@gmail.com>
 
 	* lily/page-breaking.cc (make_pages): honour the first-page-number
